// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseIcon supports incoming prop className 1`] = `
<span
  class="BaseIcon MyIcon incomingClassName"
  data-lego="react"
>
  <svg
    fill="currentColor"
    height="10"
    viewBox="0 0 10 10"
    width="10"
  >
    <line
      x1="0"
      x2="10"
      y1="0"
      y2="10"
    />
  </svg>
</span>
`;

exports[`BaseIcon supports incoming prop mix as array 1`] = `
<span
  class="BaseIcon button2__icon another-block__icon MyIcon"
  data-lego="react"
>
  <svg
    fill="currentColor"
    height="10"
    viewBox="0 0 10 10"
    width="10"
  >
    <line
      x1="0"
      x2="10"
      y1="0"
      y2="10"
    />
  </svg>
</span>
`;

exports[`BaseIcon supports incoming prop mix as object 1`] = `
<span
  class="BaseIcon button2__icon MyIcon"
  data-lego="react"
>
  <svg
    fill="currentColor"
    height="10"
    viewBox="0 0 10 10"
    width="10"
  >
    <line
      x1="0"
      x2="10"
      y1="0"
      y2="10"
    />
  </svg>
</span>
`;

exports[`BaseIcon supports incoming prop mods 1`] = `
<span
  class="BaseIcon BaseIcon_mod1_val1 BaseIcon_mod2 MyIcon"
  data-lego="react"
>
  <svg
    fill="currentColor"
    height="10"
    viewBox="0 0 10 10"
    width="10"
  >
    <line
      x1="0"
      x2="10"
      y1="0"
      y2="10"
    />
  </svg>
</span>
`;

exports[`BaseIcon supports incoming prop width, height, fill and stroke - will be passed to svg tag 1`] = `
<span
  class="BaseIcon MyIcon"
  data-lego="react"
>
  <svg
    fill="black"
    height="14px"
    stroke="red"
    viewBox="0 0 10 10"
    width="14px"
  >
    <line
      x1="0"
      x2="10"
      y1="0"
      y2="10"
    />
  </svg>
</span>
`;
